# bnex_test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  docker-entrypoint.sh  manage.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml  ci_front.yaml
bnex/: asgi.py  openapi.py  settings.py  urls.py  wsgi.py
core/: models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/tests/: test_users.py
frontend/: .env.development  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: GuardedRoute.tsx
frontend/src/components/Actions/: Actions.test.tsx  index.tsx  styles.scss
frontend/src/components/CreateProductForm/: index.scss  index.tsx
frontend/src/components/ErrorLabel/: index.scss  index.tsx
frontend/src/components/LoginForm/: index.scss  index.tsx
frontend/src/components/NavBar/: Navbar.test.tsx  index.scss  index.tsx
frontend/src/components/ProductsTable/: ProductsTableRow.tsx  index.tsx  styles.scss
frontend/src/contexts/: UserContext.ts
frontend/src/hooks/: useAuth.tsx  useUserContext.tsx
frontend/src/pages/: CreateProduct.tsx  ErrorPage.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/pages/Home/: index.tsx  styles.scss
frontend/src/services/: api.ts  auth.ts  products.ts
frontend/src/utils/: testUtils.tsx  tests.d.ts
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_updated_at_alter_product_created_at.py
products/tests/: test_products.py
